@@ -1278,6 +1278,33 @@ sub read_query {
 }
 
 #------------------------------------------------------------------------------
+# ●クエリー構築	※フォームデータ構築にも使える
+#------------------------------------------------------------------------------
+sub make_query {
+	my $self = shift;
+	my $h = shift || $self->{Query};
+	my $amp = shift;
+	my $q;
+	foreach(keys(%$h)) {
+		my $k = $_;
+		my $v = $h->{$k};
+		$self->encode_uricom($k);
+		foreach(@{ ref($v) ? $v : [$v] }) {
+			my $x = $_;
+			$self->encode_uricom($x);
+			$q .= "$k=$x&";
+		}
+	}
+	chop($q);
+	return $q;
+}
+sub make_query_amp {
+	my $q = &make_query(@_);
+	$q =~ s/&/&amp;/g;
+	return $q;
+}
+
+#------------------------------------------------------------------------------
 # ●PATH INFO 解析
 #------------------------------------------------------------------------------
 #  PATH_INFO = /xxx/yyy/zzz
