@@ -674,27 +674,6 @@ sub check_email {
 # ■クエリー・フォーム処理
 ###############################################################################
 #------------------------------------------------------------------------------
-# ●クエリー構築	※フォームデータ構築にも使える
-#------------------------------------------------------------------------------
-sub make_query {
-	my $self = shift;
-	my $h = shift || $self->{Query};
-	my $q;
-	foreach(keys(%$h)) {
-		my $k = $_;
-		my $v = $h->{$k};
-		$self->encode_uricom($k);
-		foreach(@{ ref($v) ? $v : [$v] }) {
-			my $x = $_;
-			$self->encode_uricom($x);
-			$q .= "$k=$x&";
-		}
-	}
-	chop($q);
-	return $q;
-}
-
-#------------------------------------------------------------------------------
 # ●フォームの読み込み（実体）
 #------------------------------------------------------------------------------
 sub _read_form {
