@@ -41,7 +41,7 @@ HTML
 	<li class="to-artlist to-comlist"><a href="<@v.myself>?artlist" target="_blank">記事一覧</a> / <a href="<@v.myself>?comlist" target="_blank">コメント一覧</a></li>
 HTML
 	$modules{'print-link'} = <<'HTML';
-	<li class="to-print"><a href="<@v.myself2><@esc(v.pinfo)>?<@if(v.query0,  #'<@v.query0>&amp;')><@esc(make_query())>&amp;_theme=satsuki2/_print" rel="nofollow">印刷用の表示</a></li>
+	<li class="to-print"><a href="<@v.myself2><@esc(v.pinfo)>?<@if(v.query0,  #'<@v.query0>&amp;')><@make_query_amp()>&amp;_theme=satsuki2/_print" rel="nofollow">印刷用の表示</a></li>
 HTML
 	$modules{'print-link_blank'} = <<'HTML';
 	<li class="to-print"><a href="<@v.myself2><@esc(v.pinfo)>?<@if(v.query0,  #'<@v.query0>&amp;')><@esc(make_query())>&amp;_theme=satsuki2/_print" rel="nofollow" target="_blank">印刷用の表示</a></li>
