@@ -48,7 +48,7 @@
 <ul class="hatena-section">
 <@if(s.description_txt, #'<li class="description"><@s.description_txt></li>\n')>
 <li class="to-artlist"><a href="<@v.myself>?artlist" rel="nofollow">記事一覧</a></li>
-<li class="to-print"><a href="<@v.myself2><@esc(v.pinfo)>?<@if(v.query0, #'<@v.query0>&amp;')><@esc(make_query())>&amp;_theme=satsuki2/_print" rel="nofollow">印刷用の表示</a></li>
+<li class="to-print"><a href="<@v.myself2><@esc(v.pinfo)>?<@if(v.query0, #'<@v.query0>&amp;')><@make_query_amp()>&amp;_theme=satsuki2/_print" rel="nofollow">印刷用の表示</a></li>
 </ul>
 </div> <!-- hatena-modulebody -->
 </div> <!-- hatena-module -->
